--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-streamlit
-pandas
-numpy
-scikit-learn
-spacy
-nltk
+
+streamlit==1.29.0
+
+# Data handling
+pandas==2.1.1
+numpy==1.26.0
+
+# NLP
+spacy==3.6.1
+textblob==0.17.1
+
+# Machine Learning
+scikit-learn==1.3.2
+matplotlib==3.8.0
+
+# SpaCy English model (optional, can be downloaded via command)
+# python -m spacy download en_core_web_sm
