--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ streamlit
 # Data handling
 pandas
 numpy
+
 # NLP
 spacy
 textblob
@@ -11,9 +12,7 @@ textblob
 # Machine Learning
 scikit-learn
 matplotlib
+en-core-web-sm
 
 # SpaCy English model (optional, can be downloaded via command)
 # python -m spacy download en_core_web_sm
-
-
-
